--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,34 @@
     <!-- section footer start -->
     <footer class="footer">
         <div class="container">
-            
+            <div class="fotter__wrapper">
+
+                <div class="footer__item footer__item-first">
+                    <div class="footer__item-logo">
+                        <div class="footer__item-img"><img src="img/icons/logo.svg" alt="logo"></div>
+                        <div class="footer__item-descr">Like Центр</div>
+                    </div>
+                </div>
+
+                <div class="footer__item footer__item-second">
+                    <div class="footer__item-tel"></div>
+                    <div class="footer__item-social">
+                        <div class="footer__item-youtube"><img src="img/icons/youtube_logo.png" alt="youtube"></div>
+                        <div class="footer__item-telegram"><img src="img/icons/telegram_logo.png" alt="telegram"></div>
+                        <div class="footer__item-vk"><img src="img/icons/vk_logo.png" alt="vk"></div>
+                    </div>
+                </div>
+
+                <div class="footer__item footer__item-thirdy">
+                    <div class="footer__item-confidencial">Политика конфиденциальности</div>
+                    <div class="footer__item-info">
+                        ИНН/КПП: 9703005016/770301001 123112, 
+                        Москва, ул. Пресненская набережная, д. 12,
+                        «Башня Федерация. Восток», 30 этаж
+                    </div>
+                </div>
+
+            </div>
         </div>
     </footer>
 </body>
