--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wildberries</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500&family=Montserrat:wght@400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500&family=Montserrat:wght@400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <div class="promo__background-img"><img src="img/bg/infocygan.png" alt="bg_main"></div>
 
                 <div class="promo__block">
-                    <div class="promo__block-title">Как запустить <br> <span>бизнес на Wildberries</span> <br> за 7 дней с нуля</div>
+                    <div class="promo__block-title title">Как запустить <br> <span>бизнес на Wildberries</span> <br> за 7 дней с нуля</div>
                     <div class="promo__block-button">Участвовать бесплатно</div>
 
                     <div class="promo__guide">
@@ -88,17 +88,19 @@
     <!-- section footer start -->
     <footer class="footer">
         <div class="container">
-            <div class="fotter__wrapper">
+            <div class="footer__wrapper">
 
                 <div class="footer__item footer__item-first">
                     <div class="footer__item-logo">
                         <div class="footer__item-img"><img src="img/icons/logo.svg" alt="logo"></div>
                         <div class="footer__item-descr">Like Центр</div>
                     </div>
+                    <div class="footer__item-company">Технологическая образовательная <br> компания для предпринимателей</div>
+                    <div class="footer__item-rights">Все права защищены, 2022. АНО «ЦРП»</div>
                 </div>
 
                 <div class="footer__item footer__item-second">
-                    <div class="footer__item-tel"></div>
+                    <div class="footer__item-tel">8(800)550-76-19</div>
                     <div class="footer__item-social">
                         <div class="footer__item-youtube"><img src="img/icons/youtube_logo.png" alt="youtube"></div>
                         <div class="footer__item-telegram"><img src="img/icons/telegram_logo.png" alt="telegram"></div>
@@ -107,9 +109,9 @@
                 </div>
 
                 <div class="footer__item footer__item-thirdy">
-                    <div class="footer__item-confidencial">Политика конфиденциальности</div>
+                    <div class="footer__item-confidencial"><a href="#">Политика конфиденциальности</a></div>
                     <div class="footer__item-info">
-                        ИНН/КПП: 9703005016/770301001 123112, 
+                        ИНН/КПП: 9703005016/770301001 <br> 123112, 
                         Москва, ул. Пресненская набережная, д. 12,
                         «Башня Федерация. Восток», 30 этаж
                     </div>
@@ -118,5 +120,22 @@
             </div>
         </div>
     </footer>
+
+
+
+
+    <div class="button">
+        <div class="button-container">
+            <a href="#" class="btn">
+                <span>Открыть полную версию сайта</span>
+            </a>
+            <div class="arrow-block">
+                <div class="arrow"></div>
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
