mobile adaptive first section

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <!-- section promo start -->
     <section class="promo">
         <div class="container">
             <div class="promo__wrapper">
@@ -31,14 +30,13 @@
                     </div>
 
                 </div>
-                <div class="promo-arrow"><img src="img/icons/arrowtwo.svg" alt=""></div>
+                <!-- <div class="promo-arrow"><img src="img/icons/arrowtwo.svg" alt=""></div> -->
             </div>
         </div>
     </section>
-    <!-- section promo start -->
 
-    <!-- section masterclass start -->
-    <section class="masterclass">
+
+    <!-- <section class="masterclass">
         <div class="container">
             <div class="masterclass-title">На мастер-классе <br> ты получишь:</div>
 
@@ -61,11 +59,10 @@
 
             </div>
         </div>
-    </section>
-    <!-- section masterclass end -->
+    </section> -->
 
-    <!-- section reviews start -->
-    <section class="reviews">
+
+    <!-- <section class="reviews">
 
         <div class="container">
             <div class="reviews-title">Отзывы участников</div>
@@ -82,11 +79,10 @@
         <div class="reviews__background-thirdy"><img src="img/bg/tild6533-6163-4431-b662-643036633666__photo.png" alt=""></div>
 
 
-    </section>
-    <!-- section reviews end -->
+    </section> -->
 
-    <!-- section footer start -->
-    <footer class="footer">
+
+    <!-- <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
 
@@ -119,12 +115,12 @@
 
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
 
 
-    <div class="button">
+    <!-- <div class="button">
         <div class="button-container">
             <a href="#" class="btn">
                 <span>Открыть полную версию сайта</span>
@@ -133,7 +129,7 @@
                 <div class="arrow"></div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
