mobile adaptive second section

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </section>
 
 
-    <!-- <section class="masterclass">
+    <section class="masterclass">
         <div class="container">
             <div class="masterclass-title">На мастер-классе <br> ты получишь:</div>
 
@@ -59,7 +59,7 @@
 
             </div>
         </div>
-    </section> -->
+    </section>
 
 
     <!-- <section class="reviews">
