mobile adaptive thir dy section

--- a/src/index.html
+++ b/src/index.html
@@ -62,14 +62,13 @@
     </section>
 
 
-    <!-- <section class="reviews">
+    <section class="reviews">
 
         <div class="container">
             <div class="reviews-title">Отзывы участников</div>
 
             <div class="reviews__block">
-                <div class="reviews-images1"><img src="img/icons/reviewss.jpeg" alt=""></div>
-                <div class="reviews-images2"><img src="img/icons/reviews.jpeg" alt=""></div>
+                <div class="reviews-images1"><img src="img/imgonline-com-ua-2to1-R9JSPTINr4.jpeg" alt=""></div>
             </div>
             
         </div>
@@ -79,10 +78,10 @@
         <div class="reviews__background-thirdy"><img src="img/bg/tild6533-6163-4431-b662-643036633666__photo.png" alt=""></div>
 
 
-    </section> -->
+    </section>
 
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
 
@@ -115,7 +114,7 @@
 
             </div>
         </div>
-    </footer> -->
+    </footer>
 
 
 
